--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
 
   path: ^1.8.0
   provider: ^5.0.0
-  path_provider_ex: ^1.0.1
+  filesystem_picker: ^2.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
