--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.8.0
   provider: ^5.0.0
   filesystem_picker: ^2.0.0-nullsafety.0
+  media_metadata_plugin: ^0.0.5
 
 dev_dependencies:
   flutter_test:
