--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   path: ^1.8.0
   provider: ^5.0.0
   filesystem_picker: ^2.0.0-nullsafety.0
-  media_metadata_plugin: ^0.0.5
+  flutter_media_metadata: ^0.1.0
 
 dev_dependencies:
   flutter_test:
