--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
   package_info: ^2.0.2
   audioplayers: ^0.19.1
   flutter_svg: ^0.22.0
-  flutter_visualizers: ^0.0.2
+  flutter_icons: ^1.1.0
+  stretchy_header: ^2.0.0
+  animations: ^2.0.1
 
 dev_dependencies:
   flutter_test:
